--- a/ACS.StartTrekTesting/packages.config
+++ b/ACS.StartTrekTesting/packages.config
@@ -3,4 +3,6 @@
   <package id="NUnit" version="2.6.4" targetFramework="net35" />
   <package id="Selenium.Support" version="2.47.0" targetFramework="net35" />
   <package id="Selenium.WebDriver" version="2.47.0" targetFramework="net35" />
+  <package id="SpecFlow" version="1.9.0" targetFramework="net35" />
+  <package id="SpecFlow.NUnit" version="1.1.1" targetFramework="net35" />
 </packages>
