Created Eninge class that will run everithing

--- a/ACS.StartTrekTesting/ACS.StartTrekTesting.csproj
+++ b/ACS.StartTrekTesting/ACS.StartTrekTesting.csproj
@@ -36,6 +36,10 @@
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Protractor, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Protractor.0.6.0\lib\net35\Protractor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -73,6 +77,12 @@
       <LastGenOutput>CrewManifestSpec.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ACS.TestCore\ACS.TestCore.csproj">
+      <Project>{2DC837A0-9414-420F-86CE-CA570B2DA16E}</Project>
+      <Name>ACS.TestCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
