--- a/ACS.WebAPI/App_Data/crewmanifest.json
+++ b/ACS.WebAPI/App_Data/crewmanifest.json
@@ -4,10 +4,10 @@
     {
       "Name": null,
       "Picture": null,
-      "Description": "Dukat (Star Trek) - Dukat is the main antagonist of the television series Star Trek: Deep Space Nine. A member of the fictional Cardassian species, he is introduced as the former overseer of the series' namesake space station but goes on to become the leader of his species' governing body, the Cardassian Union.",
-      "FirstUrl": "https://duckduckgo.com/Dukat_(Star_Trek)",
+      "Description": "Ezri Dax - Ezri Dax is a fictional character who appears in the seventh season of the American science fiction TV series Star Trek: Deep Space Nine. Portrayed by Nicole de Boer, she is a counselor aboard the Federation space station Deep Space Nine.",
+      "FirstUrl": "https://duckduckgo.com/Ezri_Dax",
       "Icon": {
-        "Url": "https://duckduckgo.com/i/f8b7e615.jpg",
+        "Url": "https://duckduckgo.com/i/b2965860.jpg",
         "Height": "",
         "Width": ""
       }
@@ -15,21 +15,10 @@
     {
       "Name": null,
       "Picture": null,
-      "Description": "Elim Garak - Elim Garak is a fictional character from the television series Star Trek: Deep Space Nine, in which he is portrayed by Andrew J. Robinson. In the series, Garak is an exiled spy from the Cardassian Union and a former member of the feared Cardassian intelligence group called the Obsidian Order.",
-      "FirstUrl": "https://duckduckgo.com/Elim_Garak",
+      "Description": "Jadzia Dax - Jadzia Dax, played by Terry Farrell, was a main character during the first six seasons of the science fiction television series Star Trek: Deep Space Nine.",
+      "FirstUrl": "https://duckduckgo.com/Jadzia_Dax",
       "Icon": {
-        "Url": "https://duckduckgo.com/i/8ab196ba.png",
-        "Height": "",
-        "Width": ""
-      }
-    },
-    {
-      "Name": null,
-      "Picture": null,
-      "Description": "Benjamin Sisko - Benjamin Lafayette Sisko, played by Avery Brooks, is the main character of the television series Star Trek: Deep Space Nine.",
-      "FirstUrl": "https://duckduckgo.com/Benjamin_Sisko",
-      "Icon": {
-        "Url": "https://duckduckgo.com/i/cd1139f4.jpg",
+        "Url": "https://duckduckgo.com/i/ca3954f3.jpg",
         "Height": "",
         "Width": ""
       }
