--- a/ACS.StartTrekTesting/App.config
+++ b/ACS.StartTrekTesting/App.config
@@ -3,7 +3,12 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
+  <appSettings>
+    <add key="IsLocal" value="true"/>
+    <add key="ExtensionLocation" value="extension.crx"/>
+  </appSettings>
   <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="NUnit" /></specFlow>
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="NUnit" />
+  </specFlow>
 </configuration>
