--- a/ACS.TestCore/packages.config
+++ b/ACS.TestCore/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Protractor" version="0.6.0" targetFramework="net35" />
   <package id="Selenium.WebDriver" version="2.47.0" targetFramework="net35" />
 </packages>
