--- a/ACS.WebAPI/App_Data/crewmanifest.json
+++ b/ACS.WebAPI/App_Data/crewmanifest.json
@@ -22,6 +22,28 @@
         "Height": "",
         "Width": ""
       }
+    },
+    {
+      "Name": null,
+      "Picture": null,
+      "Description": "Dukat (Star Trek) - Dukat is the main antagonist of the television series Star Trek: Deep Space Nine. A member of the fictional Cardassian species, he is introduced as the former overseer of the series' namesake space station but goes on to become the leader of his species' governing body, the Cardassian Union.",
+      "FirstUrl": "https://duckduckgo.com/Dukat_(Star_Trek)",
+      "Icon": {
+        "Url": "https://duckduckgo.com/i/f8b7e615.jpg",
+        "Height": "",
+        "Width": ""
+      }
+    },
+    {
+      "Name": null,
+      "Picture": null,
+      "Description": "Dax (Star Trek) - Dax is a character in the fictional Star Trek universe. Like all other Trill symbionts, it lives inside humanoid hosts.",
+      "FirstUrl": "https://duckduckgo.com/Dax_(Star_Trek)",
+      "Icon": {
+        "Url": "",
+        "Height": "",
+        "Width": ""
+      }
     }
   ]
 }
