--- a/ACS.StartTrekTesting/packages.config
+++ b/ACS.StartTrekTesting/packages.config
@@ -1,9 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="2.0.2" targetFramework="net46" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net46" />
+  <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="NUnit" version="2.6.4" targetFramework="net35" />
-  <package id="Protractor" version="0.6.0" targetFramework="net35" />
-  <package id="Selenium.Support" version="2.47.0" targetFramework="net35" />
-  <package id="Selenium.WebDriver" version="2.47.0" targetFramework="net35" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="Protractor" version="0.6.0" targetFramework="net35" requireReinstallation="True" />
+  <package id="Selenium.Support" version="2.47.0" targetFramework="net35" requireReinstallation="True" />
+  <package id="Selenium.WebDriver" version="2.47.0" targetFramework="net35" requireReinstallation="True" />
   <package id="SpecFlow" version="1.9.0" targetFramework="net35" />
   <package id="SpecFlow.NUnit" version="1.1.1" targetFramework="net35" />
 </packages>
