--- a/ACS.StartTrekTesting/packages.config
+++ b/ACS.StartTrekTesting/packages.config
@@ -4,9 +4,11 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.Owin" version="2.0.2" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net46" />
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net46" />
+  <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="NUnit" version="2.6.4" targetFramework="net35" />
   <package id="Owin" version="1.0" targetFramework="net46" />
