--- a/ACS.StartTrekTesting/ACS.StartTrekTesting.csproj
+++ b/ACS.StartTrekTesting/ACS.StartTrekTesting.csproj
@@ -105,21 +105,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CrewManifestsController.cs" />
-    <Compile Include="CrewManifestsPageObject.cs" />
-    <Compile Include="CrewManifestSpec.feature.cs">
+    <Compile Include="CrewManifestsTest\CrewManifestsController.cs" />
+    <Compile Include="CrewManifestsTest\CrewManifestsPageObject.cs" />
+    <Compile Include="CrewManifestsTest\CrewManifestSpec.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CrewManifestSpec.feature</DependentUpon>
     </Compile>
-    <Compile Include="CrewManifestSteps.cs" />
+    <Compile Include="CrewManifestsTest\CrewManifestsStartup.cs" />
+    <Compile Include="CrewManifestsTest\CrewManifestSteps.cs" />
     <Compile Include="CrewManifestTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="CrewManifestSpec.feature">
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="CrewManifestsTest\CrewManifestSpec.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>CrewManifestSpec.feature.cs</LastGenOutput>
     </None>
@@ -134,6 +136,10 @@
       <Project>{51FAE25B-4A77-49A2-B43C-AB110D1CC65D}</Project>
       <Name>ServiceApi</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Common\Controllers\" />
+    <Folder Include="CrewManifestsTest\Controllers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
